--- a/pom.xml
+++ b/pom.xml
@@ -70,3 +70,11 @@
     </distributionManagement>
 
 </project>
+
+<distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>ip-172-0-0-41.us-east-2.compute.internal-releases</name>
+        <url>http://52.15.98.62:8081/artifactory/libs-release</url>
+    </repository>
+</distributionManagement>
